Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53816

Multiviewport - example crashes on exit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.1
    • 5.7.0 RC
    • Qt3D
    • None
    • OSX 10.11.4
    • 8570c594d6207cde7c5f76098c79e9ba46457604

      Example crashes in global destructor when destroying QVector<QString>. Issue comes from plugins having constant string data.

      This bug report is for Qt3D to avoid/workaround the issue described in QTBUG-49061.

      crash stack

      1 QVector<QString>::~QVector()   0x1000d3c03    
      2 __cxa_finalize_ranges          0x7fff8f9bf46b 
      3 exit                           0x7fff8f9bf76f 
      4 start                          0x7fff8ea495b4 
      

        For Gerrit Dashboard: QTBUG-53816
        # Subject Branch Project Status CR V

            e0150566 Janne Roine
            e0150566 Janne Roine
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes