Fix applications using SceneLoader crashing at exit

Changed QStringLiterals to QLatin1Strings to prevent static
StringToInt::m_stringsArray crashing in global destructor as the plugin
has been unloaded.

Task-number: QTBUG-53816
Change-Id: I41c491be6daae576d6a53f9d6ed3ee9480724568
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>